--- a/composeApp/src/wasmJsMain/resources/index.html
+++ b/composeApp/src/wasmJsMain/resources/index.html
@@ -7,7 +7,7 @@
 
     <base href="/ErrorsAndCuP/">
 
-    <script type="application/javascript" src="composeApp.js"></script>
+    <script type="application/javascript" src="presentation.js"></script>
 </head>
 <body>
 </body>
